fix: added css to apply hover styles on icon children in tabs, only when hover class is provided - this will stop warnings receiving wrong colors.

--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -13,6 +13,11 @@
 
     .bp3-tab:not([aria-disabled='true']):hover {
       color: var(--primary-6);
+      :global {
+        .bp3-icon.hover {
+          color: var(--primary-6);
+        }
+      }
     }
   }
 }
